<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Bitcoin Now</string>
    <string name="title_maps">Coin Map</string>
    <string name="title_news">News</string>

    <!-- Strings related to Settings -->
    <string name="title_settings">Settings</string>
    <string name="pref_category_rates">Exchange Rates</string>

    <string name="pref_key_bitcoin_provider" translatable="false">provider</string>
    <string name="pref_title_provider">Provider</string>
    <string name="pref_title_provider_mercado">Mercado Bitcoin</string>
    <string name="pref_title_provider_blockchain">Blockchain</string>
    <string name="pref_default_provider" translatable="false">@string/pref_title_provider_mercado</string>
    <string-array name="pref_list_providers" translatable="false">
        <item>@string/pref_title_provider_mercado</item>
        <item>@string/pref_title_provider_blockchain</item>
    </string-array>

    <string name="pref_key_currency" translatable="false">currency</string>
    <string name="pref_title_currency">Currency</string>
    <string name="pref_default_currency" translatable="false">BRL</string>
    <string-array name="pref_list_currency" translatable="false">
        <item>USD</item>
        <item>ISK</item>
        <item>TWD</item>
        <item>CHF</item>
        <item>EUR</item>
        <item>DKK</item>
        <item>CLP</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>THB</item>
        <item>AUD</item>
        <item>SGD</item>
        <item>KRW</item>
        <item>JPY</item>
        <item>PLN</item>
        <item>GBP</item>
        <item>SEK</item>
        <item>NZD</item>
        <item>BRL</item>
        <item>RUB</item>
    </string-array>

    <string name="pref_category_app">Application</string>

    <string name="pref_key_main_screen" translatable="false">screen</string>
    <string name="pref_title_main_screen">Main Screen</string>
    <string name="pref_default_main_screen" translatable="false">@string/title_news</string>
    <string-array name="pref_list_main_screen" translatable="false">
        <item>@string/title_maps</item>
        <item>@string/title_news</item>
    </string-array>

    <string name="pref_key_sync" translatable="false">resync</string>
    <string name="pref_title_sync">Sync Interval</string>
    <string name="pref_default_sync" translatable="false">30</string>
    <string-array name="pref_list_sync">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="pref_list_sync_values" translatable="false">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>

    <string name="pref_title_about">About</string>
    <string name="pref_version">Version</string>
    <string name="pref_donate">Donate</string>
    <string name="pref_donate_summary">If you like this app, please donate to help this project.</string>
    <string name="pref_donate_url">http://gabeira.tip.me</string>
    <string name="pref_made_by">Made with ♥ by Gabriel Pereira</string>
    <string name="pref_made_by_url">https://www.linkedin.com/in/gabeira</string>

    <string name="pref_key_update_map" translatable="false">update_map</string>
    <string name="pref_update_map">Update Bitcoin Map Venues</string>
    <string name="pref_update_map_request">Request update Map Venues on</string>
    <string name="pref_update_map_last">Last update on <xliff:g id="time">%1$s</xliff:g> with <xliff:g id="num_venue">%2$s</xliff:g> venues</string>

    <string name="google_app_id">AIzaSyABoDmB5YxERAFSph6o497I4Igs_IvyL6I</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">bitcoinnow.mobi</string>
    <string name="content_authority" translatable="false">mobi.android.bitcoinnow</string>

    <string name="pref_server_status_key" translatable="false">server-status</string>

    <string name="widget_bitcoin_now">Bitcoin Now Widget</string>

    <string name="action_share">Share</string>
    <string name="hours_ago">hours ago</string>
    <string name="by">by</string>
    <string name="comments">comments</string>

</resources>
