<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/pref_category_rates">
        <ListPreference
            android:defaultValue="@string/pref_default_sync"
            android:entries="@array/pref_list_sync"
            android:entryValues="@array/pref_list_sync_values"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:key="@string/pref_key_sync"
            android:title="@string/pref_title_sync" />

        <ListPreference
            android:defaultValue="@string/pref_default_provider"
            android:entries="@array/pref_list_providers"
            android:entryValues="@array/pref_list_providers"
            android:icon="@android:drawable/ic_input_get"
            android:key="@string/pref_key_bitcoin_provider"
            android:title="@string/pref_title_provider" />

        <ListPreference
            android:defaultValue="@string/pref_default_currency"
            android:dependency="@string/pref_key_bitcoin_provider"
            android:entries="@array/pref_list_currency"
            android:entryValues="@array/pref_list_currency"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:key="@string/pref_key_currency"
            android:title="@string/pref_title_currency" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_category_app">

        <Preference
            android:icon="@android:drawable/ic_menu_mapmode"
            android:key="@string/pref_key_update_map"
            android:title="@string/pref_update_map" />

        <ListPreference
            android:defaultValue="@string/pref_default_main_screen"
            android:entries="@array/pref_list_main_screen"
            android:entryValues="@array/pref_list_main_screen"
            android:icon="@android:drawable/ic_menu_view"
            android:key="@string/pref_key_main_screen"
            android:title="@string/pref_title_main_screen" />

        <PreferenceScreen
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/pref_title_about">
            <Preference android:title="@string/pref_made_by">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/pref_made_by_url" />
            </Preference>
            <Preference
                android:summary="@string/pref_donate_summary"
                android:title="@string/pref_donate">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/pref_donate_url" />
            </Preference>
            <mobi.bitcoinnow.VersionPreference android:title="@string/pref_version" />
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
