<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:orderInCategory="95"
        android:title="@string/title_maps"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_news"
        android:icon="@android:drawable/ic_menu_today"
        android:orderInCategory="98"
        android:title="@string/title_news"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_setting_dark"
        android:orderInCategory="100"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom" />

</menu>
