<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/bright_foreground_material_dark"
    android:minHeight="90dp"
    android:clickable="true">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:textColor="@android:color/primary_text_light"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/creation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_toEndOf="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="empty"
        android:textColor="@android:color/primary_text_light"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/labelHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/creation_date"
        android:layout_toRightOf="@+id/creation_date"
        android:text="@string/hours_ago"
        android:textColor="@android:color/primary_text_light"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/labelBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/labelHours"
        android:layout_toRightOf="@+id/labelHours"
        android:text="@string/by"
        android:textColor="@android:color/primary_text_light"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/labelBy"
        android:layout_toRightOf="@+id/labelBy"
        android:text="empty"
        android:textColor="@android:color/primary_text_light"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/number_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creation_date"
        android:layout_toEndOf="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="empty"
        android:textColor="@android:color/primary_text_light"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creation_date"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/number_comments"
        android:layout_toRightOf="@+id/number_comments"
        android:text="@string/comments"
        android:textColor="@android:color/primary_text_light"
        android:textSize="14sp" />

</RelativeLayout>